--- a/src/Web.config
+++ b/src/Web.config
@@ -1,23 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0"?>
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <compilation debug="false" targetFramework="4.5">
+      <assemblies>
+        <add assembly="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      </assemblies>
+    </compilation>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
-
   <system.webServer>
+    <staticContent>
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00"/>
+    </staticContent>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="x-powered-by"/>
+        <add name="Content-Security-Policy" value="object-src 'none';"/>
+        <add name="Arr-Disable-Session-Affinity" value="True"/>
+      </customHeaders>
+    </httpProtocol>
     <rewrite>
       <rules>
         <rule name="Remove www" stopProcessing="true">
-          <match url="(.*)" ignoreCase="true" />
+          <match url="(.*)" ignoreCase="true"/>
           <conditions logicalGrouping="MatchAll">
-            <add input="{HTTP_HOST}" pattern="^www\.(.+)$" />
+            <add input="{HTTP_HOST}" pattern="^www\.(.+)$"/>
           </conditions>
-          <action type="Redirect" url="http://{C:1}/{R:0}" appendQueryString="true" redirectType="Permanent" />
+          <action type="Redirect" url="http://{C:1}/{R:0}" appendQueryString="true" redirectType="Permanent"/>
         </rule>
       </rules>
     </rewrite>
   </system.webServer>
-
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
