Removed server code

--- a/src/Web.config
+++ b/src/Web.config
@@ -1,17 +1,16 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <configuration>
+
   <system.web>
-    <compilation debug="false" targetFramework="4.5">
-      <assemblies>
-        <add assembly="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-      </assemblies>
-    </compilation>
+    <compilation debug="false" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
+  
   <system.webServer>
     <staticContent>
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00"/>
     </staticContent>
+  
     <httpProtocol>
       <customHeaders>
         <remove name="x-powered-by"/>
@@ -19,6 +18,7 @@
         <add name="Arr-Disable-Session-Affinity" value="True"/>
       </customHeaders>
     </httpProtocol>
+    
     <rewrite>
       <rules>
         <rule name="Remove www" stopProcessing="true">
@@ -31,16 +31,4 @@
       </rules>
     </rewrite>
   </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
