Setting correct content type

--- a/src/Web.config
+++ b/src/Web.config
@@ -9,8 +9,11 @@
   <system.webServer>
     <staticContent>
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00"/>
+
+      <remove fileExtension=".html" />
+      <mimeMap fileExtension=".html" mimeType="text/html; charset=UTF-8" />
     </staticContent>
-  
+
     <httpProtocol>
       <customHeaders>
         <remove name="x-powered-by"/>
