Adding minified html file

--- a/src/Web.config
+++ b/src/Web.config
@@ -21,6 +21,14 @@
         <add name="Arr-Disable-Session-Affinity" value="True"/>
       </customHeaders>
     </httpProtocol>
+
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.min.html" />
+        <add value="index.html" />
+      </files>
+    </defaultDocument>
     
     <rewrite>
       <rules>
