--- a/src/Web.config
+++ b/src/Web.config
@@ -19,6 +19,7 @@
         <remove name="x-powered-by"/>
         <add name="Content-Security-Policy" value="object-src 'none';"/>
         <add name="Arr-Disable-Session-Affinity" value="True"/>
+        <add name="Vary" value="Accept-Encoding, If-Modified-Since"/>
       </customHeaders>
     </httpProtocol>
 
@@ -40,6 +41,18 @@
           <action type="Redirect" url="http://{C:1}/{R:0}" appendQueryString="true" redirectType="Permanent"/>
         </rule>
       </rules>
+
+      <outboundRules rewriteBeforeCache="false">
+        <rule name="Remove ETag">
+          <match serverVariable="RESPONSE_ETag" pattern=".+"/>
+          <action type="Rewrite" value=""/>
+        </rule>
+
+        <rule name="Send correct Vary">
+          <match serverVariable="RESPONSE_Vary" pattern=".+"/>
+          <action type="Rewrite" value="Accept-Encoding, If-Modified-Since"/>
+        </rule>
+      </outboundRules>
     </rewrite>
   </system.webServer>
 </configuration>
